--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>JavaScript is a high-level dynamic programming language that allows users to interact with websites</li>
+          <li>A variable is a named container that allows us to store data in our code</li>
+          <li>Control flow is the order in which a computer executes code in a script</li>
+          <li>Conditional statements and loops can control the order in which code is executed, if at all</li>
+          <li>A for loop uses the predictable pattern of indices to perform a task on all the items in an array by allowing a single code block to be executed over and over</li>
         </ul>
       </section>
     </main>
